--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="form__group">
-                <input id="insurance" type="text" placeholder="Valor Segurado em R$" class="form__input" />
+                <input id="insurance_value" type="text" placeholder="Valor Segurado em R$" class="form__input" />
             </div>
 
             <div class="form__group">
